samples/_failures_safe/1761128506_89020c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bba27ab3.c: In function ‘main’:
./samples/SAFE/__tmp_bba27ab3.c:144:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  144 |     size_t decomp
      |     ^~~~~~
./samples/SAFE/__tmp_bba27ab3.c:144:5: error: expected declaration or statement at end of input
